<resources>
    <string name="app_name">MiniTLC App</string>

    <!-- Navigation header strings -->
    <string name="nav_title">Olá, seja bem-vindo!</string>
    <string name="nav_sub_title">Versão: 2.0</string>

    <!-- Navigation menu strings -->
    <string name="nav_calendar">Calendário</string>
    <string name="nav_gallery">Galeria</string>
    <string name="nav_photo">Tirar foto!</string>
    <string name="nav_about">Sobre</string>
    <string name="nav_talk_with_us">Fale conoso!</string>
    <string name="nav_check_in">[TODO] Marcar presença</string>

    <!-- About me dialog strings -->
    <string name="content_text">App oficial do Mini TLC de Campinas √\n\n Dúvidas, sugestões ou reclamações, envie e-mail para:\n mini@tlccampinas.com.br\n\nBy DeKo Servidoni</string>

    <!-- Camera Editor functionality strings -->
    <string name="save_photo_success">Foto salva com sucesso!</string>
    <string name="save_photo_error">Não foi possível salvar a foto.</string>

    <!-- Home activity strings -->
    <string name="tab_events">Eventos</string>
    <string name="tab_profile">Meu Perfil</string>

    <!-- List fragment strings -->
    <string name="share_event">Compartilhar!</string>
    <string name="empty_events">Desculpe, mas ainda não temos nenhum evento! :(</string>
    <string name="no_network">Desculpe, você está sem conexão com a internet! :(</string>
    <string name="test_title">Titulo</string>
    <string name="test_locale">Local</string>
    <string name="test_when">Quando</string>
    <string name="test_desc">Descricao</string>

</resources>
