<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single">

        <!-- TODO: IMPLEMENT -->
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_calendar"
            android:visible="false"/>

        <!-- TODO: IMPLEMENT -->
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_gallery"
            android:visible="false"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/nav_photo"/>
    </group>

    <group android:id="@+id/check_in"
           android:checkableBehavior="single"
           android:visible="false">
        <!-- TODO: IMPLEMENT AFTER SERVICE -->
        <item
            android:id="@+id/nav_check_in"
            android:title="@string/nav_check_in"/>
    </group>

    <group android:id="@+id/plus"
           android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_talk_with_us"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/nav_talk_with_us"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about"/>
    </group>

</menu>
